--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Soft-Tect Free Landing Page</title>
+        <title>Arezoo Darvishi</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -48,8 +48,8 @@
                         </div>
                         <div class="col-md-6">
                             <div class="social-contact">
-                                <a href="#"><i class="fa fa-phone"></i>+011 54925849</a>
-                                <a href="#"><i class="fa fa-envelope"></i>contact@softech.com</a>
+                                <a href="#"><i class="fa fa-phone"></i>+098 9188494103</a>
+                                <a href="#"><i class="fa fa-envelope"></i>arezoodarvishi@ymail</a>
                             </div>
                         </div>
                     </div>
@@ -75,11 +75,11 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#home">Home</a></li>
-                        <li><a href="#features">PRODUCT</a></li>
-                        <li><a href="#service">Service</a></li>
-                        <li><a href="#price">PRICE</a></li>
-                        <li><a href="#business">Business</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#features">معرفی</a></li>
+                        <li><a href="#service">مهارت ها</a></li>
+                        <li><a href="#price">سوابق کاری</a></li>
+                        <li><a href="#business">صوابق تحصیلی</a></li>
+                        <li><a href="#contact">ارتباط با من</a></li>
                         <li class="login"><a href="#">Sign In</a></li>
                     </ul>
 
@@ -96,9 +96,8 @@
                             <div class="col-md-10 col-md-offset-1">
                                 <div class="home-content">
 
-                                    <h1>Bring your Big Data to Life With Soft-Tech</h1>
-                                    <p>Blue Lance transforms your company's data into rich visuals for you to collect and organize so you can focus on what matters to you. Stay in the know, spot trends as they happen, and push your business further.</p>
-
+                                    <h1>آرزو درویشی</h1>
+					<p></p>
                                     <div class="row">
                                         <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                                             <div class="home-contact">
