--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <div class="home-content">
 
                                     <h1>من به شانس اعتقاد دارم</h1>
-                                    <h3>چون هر وقت بیشتر تلاش میکنم، بیشتر شانس می آورم</h3>
+                                    <h3 style="color:whitesmoke">چون هر وقت بیشتر تلاش میکنم، بیشتر شانس می آورم</h3>
 
 
 
